rename package and fix ball 0 reflection

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_test_eins">
+    package="io.github.apfelsinecode.game_and_flutter">
    <application
         android:label="flutter_test_eins"
         android:icon="@mipmap/ic_launcher">
