--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   segment_display: ^0.5.0
+  provider: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
